Change path of css file, add favicon.

--- a/layout/header.html
+++ b/layout/header.html
@@ -8,7 +8,7 @@
     <span class="icon-bar"></span>
   </button>
   <a class="navbar-brand" href="/">
-		<img alt="考選部" width="50" height="50" src="/images/logo.png"/>
+		<img alt="考選部" width="50" height="50" src="./images/logo.png"/>
 		<div id="icon-text">
 			<span>中華民國考選部</span><br/>
 			<span>Ministry of Examination R.O.C.</span>
