--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -3,7 +3,7 @@
 
 @font-face {
   font-family: 'NotoSansCJKtc-Regular';
-  src: url("/font/NotoSansCJKtc-Regular.woff") format('woff');
+  src: url("../font/NotoSansCJKtc-Regular.woff") format('woff');
 }
 
 html, body {
