--- a/scss/home.scss
+++ b/scss/home.scss
@@ -6,7 +6,7 @@
 }
 
 #sec1 {
-	background-image: url("/images/first.jpg");
+	background-image: url("../images/first.jpg");
 	background-size: cover;
 	background-position: center;
 	height: 100%;
