--- a/view/index.hbs
+++ b/view/index.hbs
@@ -7,9 +7,24 @@
 
     {{> header }}
   <div class="container-fluid">
-		<div id="sec1">
+		<div id="sec1" class="sections">
 			<div class="form-group">
 				<input class="form-control input-lg" id="inputlg" type="text" placeholder="Search..." />
+			</div>
+		</div>
+		<div id="sec2" class="sections">
+		</div>
+		<div id="sec3" class="sections">
+			<h2>政府機關入口網站 / </h2>
+			<div class="row">
+				<div class="col-md-2 entrance doubleH singleW">總統府</div>
+				<div class="col-md-4 entrance singleH doubleW">立法院</div>
+				<div class="col-md-2 entrance singleH singleW">考試院</div>
+				<div class="col-md-2 entrance singleH singleW">監察院</div>
+				<div class="col-md-4 entrance singleH doubleW">行政院</div>
+				<div class="col-md-4 entrance singleH doubleW">司法院</div>
+				<div class="col-md-4 entrance singleH doubleW">國家安全會議</div>
+				<div class="col-md-4 entrance singleH doubleW">地方機關</div>
 			</div>
 		</div>
   </div>
