--- a/layout/head.html
+++ b/layout/head.html
@@ -1,9 +1,9 @@
 <meta charset="utf-8">
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 <!--<meta name="viewport" content="width=550, initial-scale=1">-->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
+<link rel="icon" type="image/x-icon" href="./favicon.ico" />
 <meta property="og:title" content="{{title}}">
 <meta property="og:site_name" content="{{title}}">
 <meta property="og:description" content="{{description}}">
