--- a/view/index.hbs
+++ b/view/index.hbs
@@ -29,7 +29,16 @@
 				<input class="form-control input-lg" id="inputlg" type="text" placeholder="Search..." />
 			</div>
 		</div>
-		<div id="sec2" class="sections">
+		<div id="sec2" class="sections row">
+			<div class="col-md-4">
+				<div id="bob-1" class="innerH">歷屆試題</div>
+				<div id="bob-2" class="innerH">考題違規列表</div>
+			</div>
+			<div id="bob-5" class="col-md-4 doubleH">考試資訊</div>
+			<div class="col-md-4">
+				<div id="bob-4" class="innerH">線上模擬</div>
+				<div id="bob-3" class="innerH">日期與場次</div>
+			</div>
 		</div>
 		<div id="sec3" class="sections">
 			<h2>政府機關入口網站 / </h2>
@@ -45,7 +54,6 @@
 			</div>
 		</div>
   </div>
-	<div style="height:90px;"></div>
     {{> footer }}
     <script src="./js/home.js"></script>
   </body>
