Add active condition to navbar.

--- a/layout/header.html
+++ b/layout/header.html
@@ -19,7 +19,7 @@
  <div id="navbar" class="navbar-collapse collapse">
 
     <ul class="nav navbar-nav navbar-right">
-      <li class="divider-vertical">
+      <li class="divider-vertical active">
         <a id="home" href="/">關於考選部</a>
       </li>
       <li class="divider-vertical"><a href="/about">考選法規</a></li>
