--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -6,6 +6,7 @@
 	width: 100%;
 	padding: 0 30px;
 	border-radius: 0;
+	z-index: 20;
 
 	.navbar-header {
 		.navbar-brand {
@@ -37,11 +38,15 @@
 				color: $text;
 				&:hover {
 					opacity: 1;
+					background: inherit;
 				}
 			}
-			&:hover { 
+			&:hover, &.active { 
 				background: $bg-color2;
-				a { color: #fff; }
+				a, a:hover { 
+					color: #fff; 
+					background: inherit;
+				}
 			}
 		}
 	
