--- a/layout/header.html
+++ b/layout/header.html
@@ -9,7 +9,7 @@
   </button>
   <a class="navbar-brand" href="/">
 		<img alt="考選部" width="50" height="50" src="./images/logo.png"/>
-		<div id="icon-text">
+		<div class="icon-text">
 			<span>中華民國考選部</span><br/>
 			<span>Ministry of Examination R.O.C.</span>
 		</div>
@@ -22,10 +22,10 @@
       <li class="divider-vertical active">
         <a id="home" href="/">關於考選部</a>
       </li>
-      <li class="divider-vertical"><a href="/about">考選法規</a></li>
-      <li class="divider-vertical"><a href="/sponsor">考試資訊</a></li>
-      <li class="divider-vertical"><a href="/report">資料與統計</a></li>
-      <li class="divider-vertical"><a href="/blog">便民服務</a></li>
+      <li class="divider-vertical"><a href="#">考選法規</a></li>
+      <li class="divider-vertical"><a href="#">考試資訊</a></li>
+      <li class="divider-vertical"><a href="#">資料與統計</a></li>
+      <li class="divider-vertical"><a href="#">便民服務</a></li>
       <li><a href="/en">English</a></li>
     </ul>
 
