--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -17,8 +17,9 @@ body {
   a {
     color: $text;
     &:hover {
-      color: #000;
+			color: $text;
       opacity: 0.8;
+			text-decoration: none;
   	}
 	}
 }
