--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -18,7 +18,7 @@
 			img {
 				display: inline-block;
 			}
-			#icon-text {
+			.icon-text {
 				display: inline-block;
 				vertical-align: middle;
 				padding: 6px 5px 4px;
