--- a/view/index.hbs
+++ b/view/index.hbs
@@ -25,24 +25,26 @@
 			</div>
 		</div>
 		<div id="sec1" class="sections">
-			<div id="iconTitle">
-				<img alt="考選部" width="150" height="150" src="./images/logo.png"/>
-				<div class="icon-text">
-					<span>中華民國考選部</span><br/>
-					<span>Ministry of Examination R.O.C.</span>
+			<div id="sec1-content">
+				<div id="iconTitle">
+					<img alt="考選部" width="150" height="150" src="./images/logo.png"/>
+					<div class="icon-text">
+						<span>中華民國考選部</span><br/>
+						<span>Ministry of Examination R.O.C.</span>
+					</div>
 				</div>
-			</div>
-			<div class="form-group">
-				<input class="form-control input-lg" id="inputlg" type="text" placeholder="Search... (輸入考試名稱或任何欲查詢關鍵字)" />
+				<div class="form-group">
+					<input class="form-control input-lg" id="inputlg" type="text" placeholder="Search... (輸入考試名稱或任何欲查詢關鍵字)" />
+				</div>
 			</div>
 		</div>
 		<div id="sec2" class="sections row">
-			<div class="col-md-4">
+			<div class="col-md-4 col-sm-4">
 				<div id="bob-1" class="innerH"><a href="#sec2">歷屆試題</a></div>
 				<div id="bob-2" class="innerH"><a href="#sec2">考題違規列表</a></div>
 			</div>
-			<div id="bob-5" class="col-md-4 doubleH"><a href="#sec2">考試資訊</a></div>
-			<div class="col-md-4">
+			<div id="bob-5" class="col-md-4 col-sm-4 doubleH"><a href="#sec2">考試資訊</a></div>
+			<div class="col-md-4 col-sm-4">
 				<div id="bob-4" class="innerH"><a href="#sec2">線上模擬</a></div>
 				<div id="bob-3" class="innerH"><a href="#sec2">日期與場次</a></div>
 			</div>
@@ -50,14 +52,14 @@
 		<div id="sec3" class="sections">
 			<h2>政府機關入口網站 / </h2>
 			<div class="row">
-				<a href="#sec3" class="col-md-2 entrance doubleH singleW">總統府</a>
-				<a href="#sec3" class="col-md-4 entrance singleH doubleW">立法院</a>
-				<a href="#sec3" class="col-md-2 entrance singleH singleW">考試院</a>
-				<a href="#sec3" class="col-md-2 entrance singleH singleW">監察院</a>
-				<a href="#sec3" class="col-md-4 entrance singleH doubleW">行政院</a>
-				<a href="#sec3" class="col-md-4 entrance singleH doubleW">司法院</a>
-				<a href="#sec3" class="col-md-4 entrance singleH doubleW">國家安全會議</a>
-				<a href="#sec3" class="col-md-4 entrance singleH doubleW">地方機關</a>
+				<a href="#sec3" class="col-md-2 col-sm-2 col-xs-6 entrance doubleH singleW">總統府</a>
+				<a href="#sec3" class="col-md-4 col-sm-4 col-xs-6 entrance singleH doubleW">立法院</a>
+				<a href="#sec3" class="col-md-2 col-sm-2 col-xs-6 entrance singleH singleW">考試院</a>
+				<a href="#sec3" class="col-md-2 col-sm-2 col-xs-6 entrance singleH singleW">監察院</a>
+				<a href="#sec3" class="col-md-4 col-sm-4 col-xs-6 entrance singleH doubleW">行政院</a>
+				<a href="#sec3" class="col-md-4 col-sm-4 col-xs-6 entrance singleH doubleW">司法院</a>
+				<a href="#sec3" class="col-md-4 col-sm-4 col-xs-6 entrance singleH doubleW">國家安全會議</a>
+				<a href="#sec3" class="col-md-4 col-sm-4 col-xs-6 entrance singleH doubleW">地方機關</a>
 			</div>
 		</div>
   </div>
