--- a/layout/header.html
+++ b/layout/header.html
@@ -19,14 +19,14 @@
  <div id="navbar" class="navbar-collapse collapse">
 
     <ul class="nav navbar-nav navbar-right">
-      <li class="divider-vertical active">
+      <li class="active">
         <a id="home" href="/">關於考選部</a>
       </li>
-      <li class="divider-vertical"><a href="#">考選法規</a></li>
-      <li class="divider-vertical"><a href="#">考試資訊</a></li>
-      <li class="divider-vertical"><a href="#">資料與統計</a></li>
-      <li class="divider-vertical"><a href="#">便民服務</a></li>
-      <li><a href="/en">English</a></li>
+      <li><a href="#">考選法規</a></li>
+      <li><a href="#">考試資訊</a></li>
+      <li><a href="#">資料與統計</a></li>
+      <li><a href="#">便民服務</a></li>
+      <li><a href="#">English</a></li>
     </ul>
 
   </div><!--/.nav-collapse -->
