--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -15,6 +15,7 @@
 				opacity: .8;
 			}
 			height: 80px;
+
 			img {
 				display: inline-block;
 			}
@@ -34,6 +35,10 @@
 			padding: 15px 0;
 			cursor: pointer;
 			font-weight: bold;
+			
+			@media all and (max-width: 767px) {
+				background: rgba(255,255,255,.8);
+			}
 			> a {
 				color: $text;
 				&:hover {
@@ -54,75 +59,11 @@
 }
 
 @media all and (max-width: 767px) {
-  li {
-    min-height: 36px;
-  }
-
-  .navbar-nav .open .dropdown-menu {
-    position: relative;
-    background: $bg-color;
-    margin-bottom: 16px;
-    > li {
-      background: $light-gray;
-    }
-    a {
-      background: $light-gray !important;
-      color: $bg-color !important;
-      &:hover {
-        color: $bg-color;
-				background:$bg-color2; 
-      }
-      &:focus {
-        color: $bg-color;
-      }
-    }
-  }
-
-  .dropdown-toggle {
-    span.nav-text {
-      margin-right: 17px;
-      display: inline-block;
-      width: 91%;
-    }
-  }
-
   ul.nav.navbar-nav.navbar-right {
     text-align: center;
   }
 
 }
-#navbar.fixed {
-  position: fixed;
-  width: 100%;
-  z-index: 999;
-  top: 0px;
-  background: rgba(245, 240, 228, 0.8);
-  padding: 15px 8% 10px;
-  border-bottom: 1px solid rgba(153, 150, 144, 0.29);
-  left: 0;
-}
 .navbar-fixed-top {
   padding: 0px 15px;
-}
-@media all and (max-width: 768px) {
-  #navbar.fixed {
-    margin-top: 5px;
-    background: #F5F0E4;
-    top: 45px;
-    width: 100%;
-    padding-right: 0;
-    overflow-x: hidden;
-  }
-  .navbar-header {
-    .sub-title {
-      font-size: 24px;
-    }
-  }
-  #home {
-    margin-left: 17px;
-  }
-  .navbar-default #navbar .divider-vertical {
-    height: 50px;
-  }
-
 }
